Fixes #72: [REG] The plots tooltip ares *behind* the plot

--- a/static/css/astrobin.less
+++ b/static/css/astrobin.less
@@ -1850,6 +1850,10 @@ ul.bar {
     }
 }   
 
+#stats-tooltip {
+    z-index: 9999;
+}
+
 ul.topnav {
     list-style: none;
     margin: 0;
